yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobile-casaparts-service
spec:
  type: LoadBalancer
  selector:
    app: mobile-casaparts
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
