yamls/socket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-socket-service
spec:
  selector:
    app: nestjs-socket
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
