yamls/ingress_old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobile-casaparts-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mobile.joinlabs.com.ar
      secretName: tls-joinlabs
  rules:
    - host: mobile.joinlabs.com.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobile-casaparts-service
                port:
                  number: 80
