yamls/socket-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
spec:
  rules:
    - host: mobile.joinlabs.com.ar
      http:
        paths:
          - path: /socket.io(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nestjs-socket-service
                port:
                  number: 8085
